# daita-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
daita_cli/: __init__.py  api_client.py  command_helpers.py  main.py  mcp_server.py  output.py  project_utils.py
daita_cli/commands/: _polling.py  _spinner.py  _timeline.py  agents.py  conversations.py  create.py  deployments.py  diff.py  doctor.py  executions.py  init.py  logs.py  memory.py  operations.py  push.py  replay.py  run.py  schedules.py  secrets.py  status.py  test.py  traces.py  webhooks.py
test/: .gitignore  daita-project.yaml  requirements.txt
test/agents/: my_agent.py
test/tests/: __init__.py  test_basic.py
test/workflows/: my_workflow.py
tests/: test_api_client.py  test_mcp_server.py  test_output.py  test_replay_diff_doctor.py
